feat(jurusan): Create API jurusan chore(seed): add dummy seed for testing api
